--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: mylongevity
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Calculation of life expectancy (Calculation of life expectancy)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Ilyas Bakbergenuly
+Maintainer: The package maintainer <i.bakbergenuly@uea.ac.uk>
+Description: This package calculates life expectancies based on results of a project 
+    "Use of Big Health and Actuarial Data for Understanding Longevity and Morbidity Risks"
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: sqldf,stringr, expint, survival,MASS
+RoxygenNote: 6.1.1
