--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Ilyas Bakbergenuly
 Maintainer: The package maintainer <i.bakbergenuly@uea.ac.uk>
 Description: This package calculates life expectancies based on results of a project 
     Use of Big Health and Actuarial Data for Understanding Longevity and Morbidity Risks.
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: R(>= 3.4.2) 	
